Update README, rename hand.js to player.js

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <script type="application/javascript">
       (function () {
         var canvasEl = document.getElementsByTagName("canvas")[0];
-        canvasEl.width = Election.Game.DIM_X;
-        canvasEl.height = Election.Game.DIM_Y;
+        canvasEl.width = Election.DIM_X;
+        canvasEl.height = Election.DIM_Y;
         var ctx = canvasEl.getContext("2d");
         // var game = new Asteroids.Game();
         // new Asteroids.GameView(game, ctx).start();
