--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
   <body>
     <img src="images/white_house.jpg" class="background-img"><canvas></canvas></img>
 
+    <script type="application/javascript" src="lib/resources.js"></script>
+    <script type="application/javascript" src="lib/movingObject.js"></script>
+    <script type="application/javascript" src="lib/hand.js"></script>
+    <script type="application/javascript" src="lib/bill.js"></script>
+    <script type="application/javascript" src="lib/newspaper.js"></script>
+    <script type="application/javascript" src="lib/startView.js"></script>
+    <script type="application/javascript" src="lib/gameView.js"></script>
+    <script type="application/javascript" src="lib/finishView.js"></script>
     <script type="application/javascript" src="lib/game.js"></script>
 
     <script type="application/javascript">
