--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   </head>
 
   <body>
-    <img src="images/white_house.jpg" class="background-img"><canvas></canvas></img>
+    <img src="images/white_house.jpg" class="background-img"><canvas class="canvas"></canvas></img>
 
     <script type="application/javascript" src="lib/movingObject.js"></script>
     <script type="application/javascript" src="lib/hand.js"></script>
