Successful image loading and basic rendering

--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <html>
   <head>
     <title>Election</title>
+    <link rel="stylesheet" href="css/style.css">
   </head>
 
   <body>
-    <img src="images/white_house.jpg" class="background-img"><canvas class="canvas"></canvas></img>
+    <canvas class="canvas"></canvas>
 
     <script type="application/javascript" src="lib/movingObject.js"></script>
     <script type="application/javascript" src="lib/hand.js"></script>
