--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <body>
     <canvas class="canvas"></canvas>
 
-    <script type="application/javascript" src="lib/movingObject.js"></script>
+    <script type="application/javascript" src="lib/util.js"></script>
+    <script type="application/javascript" src="lib/fallingObject.js"></script>
     <script type="application/javascript" src="lib/hand.js"></script>
     <script type="application/javascript" src="lib/bill.js"></script>
     <script type="application/javascript" src="lib/newspaper.js"></script>
