--- a/index.html
+++ b/index.html
@@ -16,5 +16,33 @@
     <script type="application/javascript" src="lib/gameView.js"></script>
     <script type="application/javascript" src="lib/finishView.js"></script>
     <script type="application/javascript" src="lib/game.js"></script>
+
+    <script type="application/javascript">
+      (function() {
+        var canvasEl = document.getElementsByTagName("canvas")[0];
+        canvasEl.width = Election.DIM_X;
+        canvasEl.height = Election.DIM_Y;
+        var ctx = canvasEl.getContext("2d"),
+            handImg = new Image(),
+            billImg = new Image(),
+            paperImg = new Image(),
+            imgsLoaded = 0;
+        handImg.src = 'images/outstretched-hand.png';
+        billImg.src = 'images/million_dollar_bill.jpg';
+        paperImg.src = 'images/newspaper.png';
+
+        var imgLoadCallback = function(){
+          imgsLoaded += 1;
+          if(imgsLoaded === 3) {
+            var game = new Election.Game(ctx, handImg, billImg, paperImg);
+            game.run();
+          }
+        };
+
+        billImg.addEventListener("load", imgLoadCallback);
+        handImg.addEventListener("load", imgLoadCallback);
+        paperImg.addEventListener("load", imgLoadCallback);
+      })();
+    </script>
   </body>
 </html>
