--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   </head>
 
   <body>
+    <audio></audio>
     <canvas class="canvas"></canvas>
 
     <script type="application/javascript" src="lib/util.js"></script>
@@ -19,7 +20,8 @@
 
     <script type="application/javascript">
       (function() {
-        var canvasEl = document.getElementsByTagName("canvas")[0];
+        var canvasEl = document.getElementsByTagName("canvas")[0],
+            audioEl = document.getElementsByTagName("audio")[0];
         canvasEl.width = Election.DIM_X;
         canvasEl.height = Election.DIM_Y;
         var ctx = canvasEl.getContext("2d"),
