Rename minified app.js to app.min.js, adhering to standard practice

--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
       <canvas id="layer2"></canvas>
     </div>
 
-    <script type="application/javascript" src="app.js"></script>
+    <script type="application/javascript" src="app.min.js"></script>
   </body>
 </html>
