Add footer with Github link

--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
       <canvas id="layer2"></canvas>
     </div>
 
+    <footer>
+      <a href="https://github.com/sebastianrjay/Election">
+        View source code on Github
+      </a>
+    </footer>
+
     <script type="application/javascript" src="app.min.js"></script>
   </body>
 </html>
